--- a/src/main/resources/templates/people.html
+++ b/src/main/resources/templates/people.html
@@ -12,7 +12,7 @@
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top" id="navbar-app">
 	<div class="container" id="navbar-app">
 	
-  	<a class="navbar-brand" href="#"><span id="logo">#{logo}</span></a>
+  	<a class="navbar-brand" th:href="@{/home}"><span id="logo">#{logo}</span></a>
 
  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     	<span class="navbar-toggler-icon"></span>
@@ -21,14 +21,13 @@
 	<div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       	<li class="nav-item">
-        	<!--<a class="nav-link" href="#">#{home.create.artist}</a>-->
-        	<a class="nav-link" th:href="@{/add-people}">#{home.artist}</a>
+        	<a class="nav-link" th:href="@{/artist}">#{home.artist}</a>
       	</li>
       	<li class="nav-item">
-        	<a class="nav-link" href="#">#{home.people}</a>
+        	<a class="nav-link" th:href="@{/people}">#{home.people}</a>
      	</li> 
     	<li class="nav-item">
-     		<a class="nav-link" href="#">#{home.related.artist}</a>
+     		<a class="nav-link" th:href="@{/related-artist}">#{home.related.artist}</a>
     	</li>
     </ul>
   	</div>
@@ -39,12 +38,8 @@
 		<div class="container">
 			<div class="banner-text">
 				<div class="banner-heading">
-					#{home.welcome}
+					#{home.people}
 				</div>
-				<!--<div class="banner-sub-heading">
-					TODO Listado de Artistas
-				</div>-->
-				<button type="button" class="btn btn-warning text-dark btn-banner">#{home.explore}</button>
 			</div>
 		</div>
 	</div>
