--- a/src/main/resources/templates/artist.html
+++ b/src/main/resources/templates/artist.html
@@ -3,10 +3,10 @@
 <head>
 	<title th:text="#{app.title}"> Title </title>
    	<link rel="stylesheet" th:href="@{/css/home.css}"/>
+   	<link rel="stylesheet" th:href="@{/css/artist.css}"/>
    	
-   	<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 </head>
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top" id="navbar-app">
@@ -40,26 +40,61 @@
 				<div class="banner-heading">
 					#{home.artist}
 				</div>
+				<a class="btn btn-warning text-dark btn-banner" th:href="@{/add-artist}">#{artist.add}</a>
 			</div>
 		</div>
 	</div>
-
-<section id="about">
-<table>
- <thead>
- <tr>
- <th>ID</th>
- <th>Name</th>
- </tr>
- </thead>
- <tbody>
- <tr th:each="allArtist : ${allArtist}">
- <td th:text="${allArtist.id}">Text ...</td>
- <td th:text="${allArtist.name}">Text ...</td>
- </tr>
- </tbody>
- </table>
- </section>
- 
+	<div class="container-fluid">
+		<form action="" th:action="@{/list-artiststyle}" method="post">
+		<div class="form-group form-row align-items-center">
+			<div class="col-auto">
+				<label for="style" class="title-table">#{artist.stylesdrop}</label>
+			</div>
+			<div class="col-auto dropdown">
+			  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    #{artist.styles}
+			  </button>
+			  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+			    <a class="dropdown-item" th:each="allStyles : ${allStyles}" th:value="${allStyles.id}"  th:text="${allStyles.name}"></a>
+			  </div>
+			</div>
+			<div class="col-auto">
+				<button type="submit" class="btn btn-warning">#{artist.submit}</button>
+			</div>
+		</div>
+		</form>
+	</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="content-artist table-responsive">
+            	<table class="table table-dark">
+            	<thead>
+	                <tr>
+	                  	<th class="title-table">Name</th>
+	                  	<th class="title-table">Year</th>
+	                  	<th></th>
+	                </tr>
+	             </thead>
+	             <tbody>
+	             <tr th:each="allArtist : ${allArtist}">
+				    <th scope="row" th:text="${allArtist.name}"></th>
+				    <td  th:text="${allArtist.year}"></td>
+				    <td class="actions">
+					<a class="btn btn-success btn-circle">#{artist.follow}</a>
+					<a class="btn btn-danger btn-circle">#{artist.like}</a>
+					<a class="btn btn-warning btn-circle" th:href="@{'/related-artist/' + ${allArtist.id}}">#{artist.related}</a>
+					
+				    </td>
+				 </tr>
+	             </tbody>
+            	</table>
+            </div>
+			
+		</div>
+	</div>
+		
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html> 
