--- a/src/main/resources/templates/add-artist.html
+++ b/src/main/resources/templates/add-artist.html
@@ -12,7 +12,7 @@
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top" id="navbar-app">
 	<div class="container" id="navbar-app">
 	
-  	<a class="navbar-brand" th:href="@{/home}"><span id="logo">#{logo}</span></a>
+  	<a class="navbar-brand" th:href="@{/home}"><span id="logo">Musify</span></a>
 
  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     	<span class="navbar-toggler-icon"></span>
@@ -21,14 +21,11 @@
 	<div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       	<li class="nav-item">
-        	<a class="nav-link" th:href="@{/artist}">#{home.artist}</a>
+        	<a class="nav-link active" th:href="@{/artist}">Artists</a>
       	</li>
       	<li class="nav-item">
-        	<a class="nav-link" th:href="@{/people}">#{home.people}</a>
+        	<a class="nav-link" th:href="@{/people}">People</a>
      	</li> 
-    	<li class="nav-item">
-     		<a class="nav-link" th:href="@{/related-artist}">#{home.related.artist}</a>
-    	</li>
     </ul>
   	</div>
 	</div>
@@ -38,19 +35,19 @@
 		<div class="container">
 			<div class="banner-text">
 				<div class="banner-heading">
-					#{home.artist}
+					Artists
 				</div>
 				<div class="container-fluid banner-sub-content">
 					<form action="" th:action="@{/add-artist}" method="post">
 						<div class="form-group">
-							<label for="exampleInputEmail1">#{artist.email} <span class="needed">*</span></label>
+							<label for="exampleInputEmail1">Artist email<span class="needed">*</span></label>
 						    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name" required="required">
 						</div>
 						<div class="form-group">
-							<label for="exampleInputPassword1">#{artist.year}</label>
-						    <input type="text" class="form-control" id="year" name="year" placeholder="Enter year">
+							<label for="exampleInputPassword1">Artist year</label>
+						    <input type="number" class="form-control" id="year" name="year" placeholder="Enter year">
 						</div>
-						<button type="submit" class="btn btn-warning">#{artist.submit}</button>
+						<button type="submit" class="btn btn-warning">Create a new Artist</button>
 					</form>
 				</div>
 			</div>
