--- a/src/main/resources/templates/artist.html
+++ b/src/main/resources/templates/artist.html
@@ -12,7 +12,7 @@
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top" id="navbar-app">
 	<div class="container" id="navbar-app">
 	
-  	<a class="navbar-brand" th:href="@{/home}"><span id="logo">#{logo}</span></a>
+  	<a class="navbar-brand" th:href="@{/home}"><span id="logo">Musify</span></a>
 
  	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     	<span class="navbar-toggler-icon"></span>
@@ -21,14 +21,11 @@
 	<div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       	<li class="nav-item">
-        	<a class="nav-link" th:href="@{/artist}">#{home.artist}</a>
+        	<a class="nav-link active" th:href="@{/artist}">Artists</a>
       	</li>
       	<li class="nav-item">
-        	<a class="nav-link" th:href="@{/people}">#{home.people}</a>
-     	</li> 
-    	<li class="nav-item">
-     		<a class="nav-link" th:href="@{/related-artist}">#{home.related.artist}</a>
-    	</li>
+        	<a class="nav-link" th:href="@{/people}">People</a>
+     	</li>
     </ul>
   	</div>
 	</div>
@@ -38,33 +35,37 @@
 		<div class="container">
 			<div class="banner-text">
 				<div class="banner-heading">
-					#{home.artist}
+					Artists
 				</div>
-				<a class="btn btn-warning text-dark btn-banner" th:href="@{/add-artist}">#{artist.add}</a>
+				<a class="btn btn-warning text-dark btn-banner" th:href="@{/add-artist}">Create a new artist!</a>
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid">
-		<form action="" th:action="@{/list-artiststyle}" method="post">
-		<div class="form-group form-row align-items-center">
-			<div class="col-auto">
-				<label for="style" class="title-table">#{artist.stylesdrop}</label>
+	
+	<div class="form-row form-style">
+		<form action="" th:action="@{/artist}" method="post" class="form-row form-style">
+			<div class="form-row form-style">
+				<div class="form-group col-auto">
+					<label for="style" class="title-table">Select a Style</label>
+				</div>
+				<div class="form-group col-auto dropdown">
+					<div class="form-group blu-margin">
+						<select class="form-control" id="id" name="id">
+							<option value="0">--</option>
+							<option th:each="allStyles : ${allStyles}" 
+								th:value="${allStyles.id}" 
+								th:text="${allStyles.name}" />
+						</select>
+					</div>
+				</div>
+				<div class="form-group col-auto">
+					<button type="submit" class="btn btn-warning">Search</button>
+				</div>
 			</div>
-			<div class="col-auto dropdown">
-			  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			    #{artist.styles}
-			  </button>
-			  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-			    <a class="dropdown-item" th:each="allStyles : ${allStyles}" th:value="${allStyles.id}"  th:text="${allStyles.name}"></a>
-			  </div>
-			</div>
-			<div class="col-auto">
-				<button type="submit" class="btn btn-warning">#{artist.submit}</button>
-			</div>
-		</div>
 		</form>
 	</div>
-	<div class="container-fluid">
+	
+	<div class="container-fluid banner-sub-content">
 		<div class="row">
 			<div class="content-artist table-responsive">
             	<table class="table table-dark">
@@ -80,16 +81,15 @@
 				    <th scope="row" th:text="${allArtist.name}"></th>
 				    <td  th:text="${allArtist.year}"></td>
 				    <td class="actions">
-					<a class="btn btn-success btn-circle">#{artist.follow}</a>
-					<a class="btn btn-danger btn-circle">#{artist.like}</a>
-					<a class="btn btn-warning btn-circle" th:href="@{'/related-artist/' + ${allArtist.id}}">#{artist.related}</a>
+					<a class="btn btn-success btn-circle" th:href="@{'/add-peopleartist/' + ${allArtist.id}}">Members</a>
+					<a class="btn btn-danger btn-circle">Like</a>
+					<a class="btn btn-warning btn-circle" th:href="@{'/related-artist/' + ${allArtist.id}}">Related artists</a>
 					
 				    </td>
 				 </tr>
 	             </tbody>
             	</table>
             </div>
-			
 		</div>
 	</div>
 		
